fixed ie11 remount issue

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,6 +10,8 @@
     <link rel="manifest" href="/manifest.json">
   </head>
   <body>
-    <!-- APP -->
+    <div id="app">
+      <!-- APP -->
+    </div>
   </body>
 </html>
