--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{{ title }}</title>
+    <title>Vue HN 2.0</title>
     <meta charset="utf-8">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="apple-touch-icon" sizes="120x120" href="/public/logo-120.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../public/logo-120.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <link rel="shortcut icon" sizes="48x48" href="/public/logo-48.png">
+    <link rel="shortcut icon" sizes="48x48" href="../public/logo-48.png">
     <meta name="theme-color" content="#f60">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="../manifest.webmanifest">
     <style>
       #skip a {  position:absolute;  left:-10000px;  top:auto;  width:1px;  height:1px;  overflow:hidden;  }
       #skip a:focus {  position:static;  width:auto;  height:auto;  }
@@ -18,6 +18,7 @@
   </head>
   <body>
   <div id="skip"><a href="#app">skip to content</a></div>
-  <!--vue-ssr-outlet-->
+  <div id="app"></div>
+  <script src="./entry-client.js"></script>
   </body>
 </html>
