--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="apple-touch-icon" sizes="120x120" href="/public/logo-120.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/logo-120.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <link rel="shortcut icon" sizes="48x48" href="/public/logo-48.png">
+    <link rel="shortcut icon" sizes="48x48" href="/logo-48.png">
     <meta name="theme-color" content="#f60">
     <link rel="manifest" href="/manifest.json">
     <style>
@@ -18,6 +18,7 @@
   </head>
   <body>
   <div id="skip"><a href="#app">skip to content</a></div>
-  <!--vue-ssr-outlet-->
+  <div id="app"></div>
+  <script type="module" src="/src/entry-client.js"></script>
   </body>
 </html>
