migration: update global mounting API usage
https://v3.vuejs.org/guide/migration/global-api.html#a-new-global-api-createapp

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{{ title }}</title>
+    <title>Vue HN</title>
     <meta charset="utf-8">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -19,6 +19,7 @@
   <body>
   <div id="skip"><a href="#app">skip to content</a></div>
   <div id="app"></div>
-  <script type="module" src="/src/entry-client.js"></script>
+  <div id="progress-container"></div>
+  <script type="module" src="/src/main.js"></script>
   </body>
 </html>
